<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <TextView
        android:text="@string/convert_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="15dp"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amount_text_view"
        android:text="1.0"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unit_type_spinner"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/amount_text_view" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/unit_type_spinner"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:columnCount="2"
        android:rowCount="6"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="#ffd9fffa">
        <TextView
            android:id="@+id/tsp_text_view"
            android:text="@string/default_tsp_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/cup_text_view"
            android:text=".208 cup"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/tbs_text_view"
            android:text="@string/default_tbs_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/oz_text_view"
            android:text="@string/default_oz_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/kg_text_view"
            android:text="@string/default_kg_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/qt_text_view"
            android:text="@string/defualt_quart_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/gallon_text_view"
            android:text=".0013 gallon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/pound_text_view"
            android:text=".0125 pound"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/mill_text_view"
            android:text="@string/default_mililiter_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/liter_text_view"
            android:text="@string/default_liter_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/mg_text_view"
            android:text="@string/default_mg_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/pint_text_view"
            android:text="@string/default_pint_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            />

    </GridLayout>


</RelativeLayout>
